FIX: team_research - CSS update TopInpageNav - prevent nav overlap [t28861]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@17650 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -290,7 +290,7 @@ div#CentralSpaceContainer.SlimHeaderFixedPosition { margin-top: 100px; }
 #CentralSpaceLogin {margin: 100px auto;padding:0;width: 600px;text-align:left;}
 #CentralSpace {text-align:left;position:relative;}
 
-.TopInpageNav {clear: left;margin-bottom:20px;margin-right: 0;position:relative;}
+.TopInpageNav {clear: left;margin-bottom:20px;margin-right: 0;position:relative;min-height: 30px;}
 .BottomInpageNav {clear: left;padding-top: 5px;margin: 20px 15px 20px 0; position:relative;}
 .BottomInpageKey {margin-right: 15px; clear: left; text-align: left;}
 .TopInpageNavLeft{float:left;}
